# zkybank

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/zkybank/: __init__.py
src/zkybank/adapters/inbound/http/fastapi/: app.py  dependencies.py  error_handlers.py  schemas.py
src/zkybank/adapters/inbound/http/fastapi/routes/: __init__.py  accounts.py  transfers.py
src/zkybank/adapters/outbound/persistence/sqlalchemy/: models.py  session.py  unit_of_work.py
src/zkybank/adapters/outbound/persistence/sqlalchemy/repositories/: account_repository.py  ledger_repository.py
src/zkybank/application/: errors.py
src/zkybank/application/dto/: commands.py  results.py
src/zkybank/application/ports/: __init__.py  account_repository.py  ledger_repository.py  unit_of_work.py
src/zkybank/application/use_cases/: __init__.py  create_account.py  deposit.py  get_balance.py  get_transactions.py  transfer.py  withdraw.py
src/zkybank/domain/: __init__.py  errors.py
src/zkybank/domain/entities/: __init__.py  account.py  ledger_entry.py
src/zkybank/domain/value_objects/: __init__.py  account_id.py  account_number.py  money.py
src/zkybank/infrastructure/: container.py  main.py  settings.py
src/zkybank/infrastructure/persistence/sqlalchemy/: models.py  session.py  unit_of_work.py
src/zkybank/infrastructure/persistence/sqlalchemy/repositories/: account_repository.py  ledger_repository.py
src/zkybank/scripts/: concurrency.py  smoke_sqlite.py
tests/unit/application/: fakes.py
tests/unit/application/use_cases/: test_create_account.py  test_deposit.py  test_get_balance.py  test_get_transactions.py  test_transfer.py  test_withdraw.py
tests/unit/domain/entities/: test_account.py  test_ledger_entry.py
tests/unit/domain/value_objects/: test_account_id.py  test_account_number.py  test_money.py
